--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h2 {
     margin: 0;
 }
 
+
 /* import font for logo */
 @font-face {
     font-family: norse-bold;
@@ -88,10 +89,47 @@ a {
 
 /* section 2 */
 
+#lets-do-it {
+    padding-left: 10px;
+    padding-bottom: 10px;
+}
+
+input,
+select,
+textarea {
+    box-sizing: border-box;
+    border-color: #E5E7EB;
+    border-radius: 5px;
+    width: 250px;
+    padding: 5px;
+    margin: 0;
+    font-family: inherit;
+    font-size: 100%;
+}
+
+input:focus {
+    border-color: blue;
+    outline: none;
+}
 
 #section-two {
     background-color: white;
     padding: 30px;
+}
+
+#password_input:invalid {
+    border-color: red;
+}
+
+#line-one, #line-two, #line-three {
+    display: flex;
+    padding: 10px;
+    gap: 70px;
+}
+
+#first-name, #last-name, #email, #tel, #password, #confirm-password {
+    display:flex;
+    flex-direction: column;
 }
 
 /* section 3 */
