--- a/style.css
+++ b/style.css
@@ -70,13 +70,13 @@ a {
 #second-half {
     width: 850px;
     height: 100vh;
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(250, 250, 250);
 }
 
 /* section 1 */
 
 #section-one {
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(250, 250, 250);
     padding-left: 50px;
     padding-right: 75px;
     padding-top: 15vh;
@@ -90,6 +90,7 @@ a {
 /* section 2 */
 
 #lets-do-it {
+    color: rgb(48, 48, 48);
     padding-left: 10px;
     padding-bottom: 10px;
 }
@@ -97,6 +98,9 @@ a {
 input,
 select,
 textarea {
+    border: 1px solid #ccc;
+    box-shadow:none;
+    outline: none;
     box-sizing: border-box;
     border-color: #E5E7EB;
     border-radius: 5px;
@@ -105,16 +109,32 @@ textarea {
     margin: 0;
     font-family: inherit;
     font-size: 100%;
+    transition: all 0.3s ease;
+}
+
+label {
+    color: rgb(66, 66, 66);
+    font-weight:bold;
+    letter-spacing: 2px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 75%;
 }
 
 input:focus {
+    box-shadow: 0 0 8px rgba(5, 5, 5, 0.5);
     border-color: blue;
     outline: none;
 }
 
+input:invalid {
+    border-color: red;
+}
+
 #section-two {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     background-color: white;
     padding: 30px;
+    margin-bottom: 10px;
 }
 
 #password_input:invalid {
@@ -136,23 +156,35 @@ input:focus {
 
 #section-three {
     padding: 35px;
-    background-color:rgb(243, 243, 243);
+    background-color:rgb(250, 250, 250);
 }
 
 #submit {
+    box-shadow: 0 0 8px rgba(5, 5, 5, 0.5);
     border-radius: 8px;
     border-width: 0px;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: bold;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-right: 45px;
-    padding-left: 45px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-right: 55px;
+    padding-left: 55px;
     color: aliceblue;
     background-color: #596D48;
+}
+
+#submit:active {
+    color: #596D48;
+    background-color: aliceblue;
 }
 
 #login {
     text-decoration: none;
     color: #596D48;
+}
+
+h4 {
+    font-size: 110%;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(43, 43, 43);
 }
